Change History
==============

1.7.20 (unreleased)
-------------------

- Updated Spanish translations
  [macagua]

- locales rebuild adding more new strings for Gettext files
  [macagua]

- Enabled the Plone Theme Classic for loadtest profile
  [macagua]


1.7.19 (2016-05-01)
-------------------

- Updated history: 1.7.18 was accidentally released as version 1.7.19.
  Both versions are valid and contain the fix.  We recommend using
  1.7.19.  [maurits]


1.7.18 (2016-05-01)
-------------------

- CGI escape field help (description); prevent method call.
  Eliminates XSS vulnerability that could be exploited by users with the ability
  to create forms.
  [smcmahon]

- Load widget specific css on quickedit form.
  [maurits]


1.7.17 (2015-06-15)
-------------------

- Check recipient name as well as address in mailing tests;
  deal with commas in recipient name. Thanks, uschwarz.
  [smcmahon]

- Fix misleading test in exportimport.
  [smcmahon]

- Change edit.gif to edit.png in quickedit.pt and fg_savedata [ableeb]

- fixed loading of widget javascripts in quickedit (#95) [reinhardt]

- left placeholder only for fields where it makes sense [montypie]

- Fixed MaxLengthValidator when string is Unicode
  [gotcha]

- Fixed loading of widget javascripts in quickedit (#95)
  [reinhardt]

- for save data adapter: handle the case in which the HTTP POST date time is added
  after some data had already been submitted [tkimnguyen]

- If the form is displayed in embedded mode, display thank you page
  in embedded mode as well.
  [naro]


1.7.16 (2014-09-26)
-------------------

- Add support for the placeholder attribute for input fields.
  Requires Plone >= 4.2, or Archetypes >= 1.7.14.
  [thet]

- Mailer adapter looks for data grid fields that contain new File
  columns and includes those files as attachments [tkimnguyen]

- Add/fix trove classifiers.
  [smcmahon]


1.7.15 (2014-07-25)
-------------------

- Add Travis CI testing for Plone 4.2 and 4.3.
  [smcmahon]
